<resources>
    <string name="app_name">WeightTracker App</string>
    <string name="Action" />
    <string name="date">Date</string>
    <string name="weight">Weight</string>
    <string name="action">Action</string>
    <string name="add_data">Add Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="enter_date">Enter Date</string>
    <string name="weight_tracker_application">Weight Tracker Application</string>
    <string name="login">Login</string>
    <string name="data_display">Data Display</string>
    <string name="sms_permission">SMS Permission</string>
    <string name="light_switch">Light Switch</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="edit_data">Edit Data</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_goal_weight">Enter Goal Weight</string>
    <string name="save">Save</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="todo">TODO</string>
    <string name="weight_loss_tracker">Weight Loss Tracker</string>
    <string name="goal_weight">Goal Weight</string>
</resources>