<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataDisplayActivity">

    <!-- EditText for Data 1 -->
    <EditText
        android:id="@+id/editTextData1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_date"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <!-- EditText for Data 2 -->
    <EditText
        android:id="@+id/editTextData2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_weight"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextData1"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <!-- EditText for Goal Weight -->
    <EditText
        android:id="@+id/editTextGoalWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Goal Weight"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextData2"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- TableLayout for Data Display -->
    <TableLayout
        android:id="@+id/tableLayoutData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGoalWeight">

        <!-- TableRow and TextViews for Headers (Data 1, Data 2, and Goal Weight) -->
        <TableRow tools:ignore="UselessParent">
            <TextView
                android:id="@+id/actionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/dateHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/weightHeader"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/goalweightHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Goal Weight"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <!-- Buttons for Adding, Deleting, and Editing Data -->
    <Button
        android:id="@+id/buttonAddData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:text="@string/add_data"
        android:textAppearance="@style/ButtonTextStyle"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutData"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonDeleteData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/delete_data"
        android:textAppearance="@style/ButtonTextStyle"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddData"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonEditData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/edit_data"
        android:textAppearance="@style/ButtonTextStyle"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteData"
        tools:ignore="VisualLintButtonSize" />
</androidx.constraintlayout.widget.ConstraintLayout>

