<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SMSPermissionActivity">

    <!-- EditText for Phone Number -->
    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/phone_number"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <!-- Button to Request SMS Permission -->
    <Button
        android:id="@+id/buttonRequestSMSPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:text="@string/save"
        android:textAppearance="@style/ButtonTextStyle"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <!-- Switch for Notifications -->
    <Switch
        android:id="@+id/switchNotifications"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/allow_notifications"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml,TextSizeCheck"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="504dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
